# miscellaneous

./: .env.sample  Cargo.toml
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/lib/api/: endpoints.ts
frontend/app/lib/axios/: axios.ts
frontend/app/lib/posts/: posts.api.ts
frontend/app/lib/service/: posts.service.ts
frontend/components/: PostCard.tsx  PostForm.tsx
src/: handlers.rs  main.rs  models.rs  state.rs
src/static/: index.html
