[package]
name = "first-proj"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "postgres", "uuid", "macros"]

